--- a/Lab1/TaskExtra/TaskExtra.csproj
+++ b/Lab1/TaskExtra/TaskExtra.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5AB7CE98-1EC6-4ABD-8AE8-B3B7A154FF20}</ProjectGuid>
+    <ProjectGuid>{8D3E95C7-0441-4545-949C-2E16C15AF40B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Task8</RootNamespace>
-    <AssemblyName>Task8</AssemblyName>
+    <RootNamespace>TaskExtra</RootNamespace>
+    <AssemblyName>TaskExtra</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Task8.cs" />
+    <Compile Include="TaskExtra.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
